--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Linter (ESLint)
         run: npm run lint
