--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js 15
+        uses: actions/setup-node@v4
+        with:
+          node-version: 15
+          check-latest: true
+
       - name: Install dependencies
         run: npm install
         working-directory: ${{ env.APP_DIR }}
@@ -29,6 +35,6 @@ jobs:
         run: npm run prettier -- --write
         working-directory: ${{ env.APP_DIR }}
 
-      - name: Run Build
+      - name: Run Tests (Jest or Build)
         run: npm run build
         working-directory: ${{ env.APP_DIR }}
